--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
   </head>
 
   <body>
-    <div class="">
+    <div>
       <% if flash[:alert].present? %>
         <div id="error_explanation" class="alert alert-danger"><%= flash[:alert] %></div>
       <% end %>
