Refactorizacion de codigo

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,6 @@
 <div class="card shadow-sm mx-auto" style="max-width: 400px;">
   <div class="card-body">
-    <h1 class="card-title text-center mb-4">Menu</h1>
+    <h1 class="card-title text-center mb-4">Menú</h1>
     <ul class="list-group list-group-flush">
       <li class="list-group-item">
         <%= link_to 'Clientes', clientes_path, class: "btn btn-primary w-100" %>
